# twsearch

./: .gitignore  Cargo.toml  LICENSE-GPL  LICENSE.md  Makefile  Makefile-j  Makefile-wasm  Makefile-wasmtest  Package.swift  Package.swift.in  README.md  README_FORK_EN.MD  README_FORK_RU.MD  TODO.txt  TurnStyle.scramble2.json  arch.md  biome.json  build.rs  bun.lockb  clean.bat  compile_for_win64.bat  ksolveformat.txt  makefile  package-lock.json  package.json  rome.json  test.bat  tsconfig.json  twsearch.cpp
src/cli/: Cargo.toml
src/cli/src/: args.rs  main.rs
src/cli/src/commands/: benchmark.rs  canonical_algs.rs  cli_benchmark.rs  cli_canonical_algs.rs  cli_derive.rs  cli_scramble.rs  cli_search.rs  gods_algorithm.rs  mod.rs
src/cli/src/serve/: serve.rs
src/cpp/: Cargo.toml  README.md  antipode.cpp  antipode.h  beamsearch.cpp  beamsearch.h  build.rs  calcsymm.cpp  calcsymm.h  canon.cpp  canon.h  city.h  cmdlineops.cpp  cmdlineops.h  cmds.cpp  cmds.h  coset.cpp  coset.h  descsets.cpp  descsets.h  filtermoves.cpp  filtermoves.h  findalgo.cpp  findalgo.h  generatingset.cpp  generatingset.h  god.cpp  god.h  index.cpp  index.h  orderedgs.cpp  orderedgs.h  ordertree.cpp  ordertree.h  parsemoves.cpp  parsemoves.h  pruneio.cpp  prunetable.cpp  prunetable.h  puzdef.cpp  (+29 more)
src/cpp/cityhash/src/: city.cc  config.h
src/cpp/examples/: test-cpp-cli.rs  test-twsearch-cpp-wrapper-cli.rs
src/cpp/examples/lib/: common.rs
src/cpp/ffi/: ffi_api.cpp  ffi_api.h  rust_api.cpp  rust_api.h  wasm_api.cpp  wasm_api.h
src/cpp/ppqsort/: README.md
src/cpp/ppqsort/ppqsort/: mainloop.h  parameters.h  partition.h  partition_branchless.h
src/cpp/rs/: benchmark.rs  main.rs  options.rs  rewrite.rs  search.rs  serialize.rs  serve.rs  wrapper_options.rs
src/ffi/: Cargo.toml  README.md  lib.rs
src/ffi/test/: c_test.c  js_test.ts
src/rs/: Cargo.toml  README.md  cbindgen.toml  main.rs  mod.rs  options.rs  search.rs  serialize.rs  serve.rs  test.js
src/rs-cli/: Cargo.toml
src/rs-cli/src/: main.rs
src/rs-cli/src/commands/: canonical_algs.rs  cli_derive.rs  cli_scramble.rs  cli_search.rs  gods_algorithm.rs  mod.rs
src/rs-cli/src/serve/: mod.rs  serve.rs
src/rs-ffi/: Cargo.toml  cbindgen.toml  events.rs  lib.rs
src/rs-ffi/test/: .gitignore  c_test.c  js_test.ts  run_c_test.ts
src/rs-swift/: .gitignore  Cargo.toml  build.rs
src/rs-swift/SwiftGenerated/: SwiftBridgeCore.swift  twsearch-swift.swift
src/rs-swift/src/: lib.rs
src/rs-wasm/: Cargo.toml  rust-toolchain.toml  wasm_api.rs
src/rs-wasm/.cargo/: config.toml
src/rs/_cli/: main.rs
src/rs/_cli/commands/: benchmark.rs  canonical_algs.rs  cli_scramble.rs  cli_search.rs  gods_algorithm.rs  mod.rs
src/rs/_cli/serve/: serve.rs
src/rs/_internal/: errors.rs  mod.rs
src/rs/_internal/canonical_fsm/: canonical_fsm.rs  generic_pattern_buffer.rs  generic_transformation_buffer.rs  mod.rs  move_class_mask.rs  search_generators.rs
src/rs/_internal/cli/: args.rs  io.rs  main.rs  mod.rs  options.rs  options_impl.rs
src/rs/_internal/gods_algorithm/: bulk_queue.rs  factor_number.rs  gods_algorithm_table.rs  mod.rs
src/rs/_internal/packed/: errors.rs  mod.rs  orientation_packer.rs  packed_kpattern.rs  packed_kpuzzle.rs  packed_ktransformation.rs  packed_orbit_data.rs
src/rs/_internal/puzzle_traits/: buffers.rs  mod.rs  puzzle_traits.rs  puzzle_traits_puzzle_for_kpuzzle.rs
src/rs/_internal/search/: blank_prune_table.rs  check_pattern.rs  filtering_decision.rs  generic_puzzle.rs  generic_puzzle_for_kpuzzle.rs  hash_prune_table.rs  idf_search.rs  index_type.rs  indexed_vec.rs  kpattern_stack.rs  mask_pattern.rs  mod.rs  move_count.rs  pattern_stack.rs  pattern_traversal_filter_trait.rs  prune_table.rs  prune_table_trait.rs  recursion_filter_trait.rs  recursive_work_tracker.rs  search.rs  search_logger.rs  transformation_traversal_filter_trait.rs  whole_number_newtype.rs
src/rs/_internal/serve/: serve.rs
src/rs/_internal/wasm/: mod.rs  wasm_api.rs
src/rs/canonical_fsm/: canonical_fsm.rs  mod.rs  search_generators.rs  search_move_cache.rs
src/rs/cli/: io.rs  main.rs
src/rs/cli/commands/: benchmark.rs  canonical_algs.rs  canonical_fsm.rs  gcd.rs  hash_map_with_key_ordering.rs  mod.rs  move_multiples.rs
src/rs/examples/: 2x2x2_three_phase.rs  benchmark.rs  kociemba_multiphase.rs  random_scramble_for_event.rs  readme_example.rs  scramble_4x4x4.rs  scramble_all_events.rs
src/rs/examples/2x2x2_three_phase/: phase1-D-orientation.kpattern.json  phase2-U-orientation.kpattern.json
src/rs/examples/kilominx/: kilominx.kpuzzle.json
src/rs/experimental_lib_api/: common.rs  compound_derived_puzzle.rs  compound_puzzle.rs  constant_alg_search_phase.rs  derived_puzzle_search_phase.rs  gods_algorithm_api.rs  kpuzzle_simple_mask_phase.rs  mod.rs  multi_phase_search.rs  search_api.rs  search_phase.rs  simple_mask_multiphase_search.rs  solve_square1_pattern.rs
src/rs/gods_algorithm/: bulk_queue.rs  factor_number.rs  gods_algorithm_table.rs  mod.rs  queue_item.rs
src/rs/packed/: mod.rs  orientation_packer.rs  packed.rs  packed_kpattern.rs  packed_kpuzzle.rs  packed_kstate.rs  packed_ktransformation.rs  packed_orbit_data.rs
src/rs/scramble/: apply_flat_alg.rs  collapse.rs  cube2x2x2.rs  cube3x3x3.rs  derive_scramble_for_event.rs  event.rs  get_kpuzzle.rs  megaminx.rs  mod.rs  parity.rs  puzzle.rs  pyraminx.rs  random_scramble_for_event.rs  randomize.rs  scramble_search.rs  solving_based_scramble_finder.rs
src/rs/scramble/definitions/: mod.rs  (+2 more)
src/rs/search/: mod.rs  prune_table.rs  recursive_work_tracker.rs  search.rs  search_logger.rs
src/rs/serve/: mod.rs  serve.rs
src/rs/wasm/: lib.rs  mod.rs  wasm_api.rs
src/ruby-gem/: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  Rakefile  twips.gemspec  twsearch.gemspec
src/ruby-gem/lib/: twips.rb  twsearch.rb
src/ruby-gem/sig/: twips.rbs  twsearch.rbs
src/ruby-gem/spec/: spec_helper.rb  twips_spec.rb  twsearch_spec.rb
src/ruby-gem/test/: test-222.rb  test-api.rb
src/wasm/: Cargo.toml  README.md  rust-toolchain.toml  wasm_api.rs
src/wasm/.cargo/: config.toml
(+563 files in other folders)
