[workspace]
resolver = "2"

members = [
  "src/cpp",
  "src/rs",
  "src/rs-ffi",
  "src/rs-wasm",
  "src/ruby-gem/ext/twsearch",
  "script/cargo-run-bin"
]
default-members = [
  "src/rs"
]

[workspace.package]
version = "0.7.2-dev"
license = "MPL-2.0"
edition = "2021"

[workspace.dependencies]
cubing = "0.14.4"

[workspace.metadata.bin]
cbindgen = { version = "0.27.0" }
cargo-binstall = { version = "1.4.4" }
wasm-pack = { version = "0.13.1" }

# This is only needed for the Ruby package, but it has to be specified at the workspace root. So it's here.
[patch.crates-io]
twsearch = { path = "./src/rs" }
