[workspace]
resolver = "2"
members = [
  "src/cpp",
  "src/rs",
  "src/rs-cli",
  "src/rs-ffi",
  "src/rs-wasm",
  "script/cargo-run-bin",
]
default-members = ["src/rs-cli"]

[workspace.package]
version = "0.10.0"
license = "MPL-2.0"
edition = "2021"
repository = "https://github.com/cubing/twsearch"

[workspace.dependencies]
cubing = "0.15.0-pre.1"

[workspace.metadata.bin]
cbindgen = { version = "0.27.0" }
cargo-binstall = { version = "1.4.4" }
wasm-pack = { version = "0.13.1" }
# Doesn't work: https://github.com/bnjbvr/cargo-machete/issues/62
# cargo-machete = { version = "0.9.1" }
