[package]
name = "twsearch-cpp-wrapper"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
clap_complete = "4.3.2"
cubing = { workspace = true }
cxx = "1.0.106"
lazy_static = "1.4.0"
num_cpus = "1.16.0"
regex = "1.9.3"
rouille = "3.6.2"
serde = { version = "1.0.186", features = ["derive", "rc"] }
serde_json = "1.0.105"
tempfile = "3.8.0"
twsearch = { path = "../rs" }

[dev-dependencies]
wait-timeout = "0.2.0"

[build-dependencies]
cxx-build = "1.0"

[[bin]]
name = "twsearch-cpp-wrapper"
path = "./rs/main.rs"
