[package]
name = "twsearch-cpp-wrapper"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
cubing = { workspace = true }
cxx = "1.0.187"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
regex = "1.12.2"
rouille = "3.6.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
twsearch = { path = "../rs", features = [] }

[dev-dependencies]
wait-timeout = "0.2.1"

[build-dependencies]
cxx-build = "1.0"

[[bin]]
name = "twsearch-cpp-wrapper"
path = "./rs/main.rs"
