[package]
name = "twsearch-cpp-wrapper"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
cubing = { workspace = true }
cxx = "1.0.187"
lazy_static = "1.5.0"
num_cpus = "1.17.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
twsearch = { path = "../rs", features = [] }

[dev-dependencies]
wait-timeout = "0.2.1"

[build-dependencies]
cxx-build = "1.0"

[[bin]]
name = "twsearch-cpp-wrapper"
path = "./rs/main.rs"
