[package]
name = "twips-ffi"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Pattern Searcher FFI — C FFI bindings for twips"
repository = "https://github.com/cubing/twips"

[features]
default = []

[dependencies]
twips = { path = "../lib", version = "0.9.1-dev" }

[lib]
path = "./lib.rs"
crate-type = ["cdylib"]

[dev-dependencies]
cubing = { workspace = true }
libloading = "0.8.9"
test-cdylib = "1.1.0"
