[package]
name = "twsearch-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Search FFI — C FFI bindings for twsearch"
repository = "https://github.com/cubing/twsearch"

[features]
default = []

[dependencies]
axum = "0.8.6"
cubing.workspace = true
instant = "0.1.13"
rand = "0.9.2"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
twsearch = { path = "../rs", version = "=0.9.0" }


[[bin]]
name = "twsearch"
path = "./src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }.v{ version }.{ target }"
pkg-fmt = "bin"
