[package]
name = "twsearch-ffi"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Search FFI — C FFI bindings for twsearch"

[features]
default = []

[dependencies]
cbindgen = "0.27.0"
twsearch = { path = "../rs", version = "0.7.1-dev" }

[lib]
path = "./lib.rs"
crate-type = ["cdylib"]

[dev-dependencies]
cubing = { workspace = true }
libloading = "0.8.1"
test-cdylib = "1.1.0"
