[package]
name = "twsearch-ffi"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Search FFI — C FFI bindings for twsearch"
repository = "https://github.com/cubing/twsearch"

[features]
default = []

[dependencies]
cbindgen = "0.29.2"
twsearch = { path = "../rs", version = "0.9.1-dev" }

[lib]
path = "./lib.rs"
crate-type = ["cdylib"]

[dev-dependencies]
cubing = { workspace = true }
libloading = "0.8.9"
test-cdylib = "1.1.0"
