[package]
name = "twsearch-ffi"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Search FFI — C FFI bindings for twsearch"
repository = "https://github.com/cubing/twsearch"

[features]
default = []

[dependencies]
twsearch = { path = "../rs", version = "=0.10.0" }

[lib]
path = "./lib.rs"
crate-type = ["cdylib"]

[dev-dependencies]
cubing = { workspace = true }
libloading = "0.8.9"
test-cdylib = "1.1.0"
