[package]
name = "twsearch-wasm"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Search WASM — WASM build of twsearch for `cubing.js`"

[features]
default = []

[dependencies]
twsearch = { path = "../rs", version = "0.6.4" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"

[lib]
path = "./lib.rs"
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = false

