[package]
name = "twsearch-wasm"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Search WASM — WASM build of twsearch for `cubing.js`"

[features]
default = []

[dependencies]
twsearch = { path = "../rs", version = "0.7.0" }
getrandom = { version = "0.2.10", features = ["js"] } # We don't use `getrandom` directly (only through `rand`), but this is the easiest way to enable the `js` feature that we need for WASM compat.
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
cubing = { workspace = true }

[lib]
path = "./lib.rs"
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = false

