[package]
name = "twsearch"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Search — Twisty puzzle search library"
repository = "https://github.com/cubing/twsearch"

[features]
default = ["simd"]
simd = ["cubing/simd"]

[dependencies]
cityhasher = "0.1.0"
clap = { version = "4.3.24", features = ["derive"] }
clap_complete = "4.3.2"
cubing = { version = "0.15.0-pre.1" }
derive_more = "0.99.17"
erased_set = "0.8.0"
indicatif = "0.17.6"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
lazy_static = "1.4.0"
multiset = "0.0.5"
num-integer = "0.1.46"
rand = "0.8.5"
rouille = "3.6.2"
serde = { version = "1.0.186", features = ["derive", "rc"] }
serde_json = "1.0.105"
thousands = "0.2.0"

[[bin]]
name = "twsearch"
path = "./_cli/main.rs"

[lib]
path = "./mod.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }.v{ version }.{ target }"
pkg-fmt = "bin"
