[package]
name = "twsearch"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Search — Twisty puzzle search library"
repository = "https://github.com/cubing/twsearch"

[features]
default = ["simd"]
simd = ["cubing/simd"]

[dependencies]
ascii = "1.1.0"
cityhasher = "0.1.0"
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
cubing = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
erased_set = "0.8.0"
hex = "0.4.3"
indicatif = "0.18.2"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
lazy_static = "1.5.0"
multiset = "0.0.5"
num-integer = "0.1.46"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
sha2 = "0.10.9"
serde_json = "1.0.145"
thousands = "0.2.0"
rand_core = "0.9.3"

[lib]
path = "./mod.rs"
crate-type = ["cdylib", "rlib"]
