# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = ["./ext/twsearch"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"
