[package]
name = "twips-wasm"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Twizzle Pattern Searcher WASM — WASM build of twips for `cubing.js`"
repository = "https://github.com/cubing/twips"

[features]
default = []

[dependencies]
twips = { path = "../lib", version = "0.11.3-dev" }
getrandom = { version = "0.3.4", features = [
  # We don't use `getrandom` directly (only through `rand`), but we need to
  # declare it as a dependency in order to enable the `wasm_js` feature that we
  # need for WASM compat.
  #
  # https://github.com/rust-lang/cargo/pull/2821
  "wasm_js",
] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.105"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
cubing = { workspace = true }

[package.metadata.cargo-machete]
# https://github.com/rust-lang/cargo/pull/2821
ignored = ["getrandom"]

[lib]
path = "./lib.rs"
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = false

# TODO
[package.metadata.wasm-pack.profile.release]
# TODO
# wasm-opt = false
wasm-opt = ["--enable-bulk-memory"]
